CHANGES IN FLTK 1.1.8

	- Added a new demo game called "Block Attack!"
	- Updated the Sudoku game to show a notice about Hard and
	  Impossible puzzles having multiple solutions which are
	  not a bug or error (STR #1361)
	- Fixed filechooser to behave as documented when file
	  pattern changes (STR #1359)
	- Completed the global function index and added an
	  alphabetical list of all methods (STR #1319)
	- Avoiding problems with some platforms that don't 
	  implement hypot() (STR #1366)
	- Fixed floating point value formatting for Fl_Spinner
	  (STR #1331)
	- Fixed Fl_Positioner callback when released (STR #1387)
	- Fixed WIN32 zero size window issue (STR #1387)
	- Fixed Sudoku window positioning (STR #1398)
	- Fluid Code Declarations can now handle
	  C++ style comments (STR #1383)
	- Fixed uninitialized data in OS X and WIN32 
	  timout functions (STR #1374).
	- Fixed speed issues when measuring text on OS X
	  with Quartz (STR #1386).
	- Fixed focus issues on OS X (STR #1377)
	- Optional precission argument when storing floats or 
	  doubles in a Preferences file (STR #1381)
	- Fixed callback not called when using arrow keys
	  in Fl_Slider (STR #1333)
	- Changing the shorcut of a widget in fluid now marks
	  the document as dirty (STR #1382)
	- Fl_Text_Editor now correctly handles middle mouse
	  clicks (STR #1384)
	- Added some GLUT4 functions (STR #1370)
	- Added "context_changed()" function for OpenGL windows
	  which allows efficent texture loading (STR #1372)
	- Added missing "const" to GLUT call (STR #1371)
	- Fixed stray FL_RELEASE events after clicking system
	  areas on OS X (STR #1376)
	- FLUID now only writes definitions of "o" and "w"
	  variables as needed, reducing the number of "variable
	  is shadowed" warnings from GCC.
	- Added access to Xft font pointer (STR #1328)
	- Fixed endianness in OS X mouse cursor graphics (STR
	  #1348)
	- Fixed crash on mixed use of keyboard and mouse for
	  Fl_Menu_Button (STR #1356)